# umeboshi

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
requirements/: compile.py  py36-django30.txt  requirements.in
src/umeboshi/: __init__.py  admin.py  apps.py  exceptions.py  models.py  routines.py  runner.py  serializer.py  tasks.py  triggers.py  utils.py
src/umeboshi/migrations/: 0001_initial.py  0002_auto_20151229_1537.py
tests/: settings.py  test.py
