[metadata]
name = django-umeboshi
version = 0.5.0
description = Umeboshi is a Django application for durable long-term scheduling of arbitrary actions.
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Tapper
author_email = mail@cjtapper.com
url = https://github.com/cjtapper/umeboshi
license = Revised BSD
keywords = Django
classifiers =
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Django>=3.0
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I,TYP
ignore = E203,E501,W503
